# Agent_Dojo

./: .dockerignore  .env.example  .gitignore  .uvignore  COMPOSIO_LANGCHAIN_INTEGRATION_COMPLETE.md  COMPOSIO_UUID_SETUP.md  Dockerfile.backend  Dockerfile.frontend  FRONTEND_COMPONENTS_COMPLETE.md  QUICKSTART.md  README.md  coverage.xml  docker-compose.yml  pyproject.toml  setup.sh  test_composio_v3.py  update_to_composio.md  verify_composio_v3.sh
.github/: copilot-instructions.md
agent_dojo/: __init__.py  main.py
agent_dojo/agents/: base_agent.py  langgraph_agent.py
agent_dojo/api/routes/: __init__.py  agents.py  canvas.py  composio.py  integrations.py  tools.py  workflows.py
agent_dojo/core/: __init__.py  config.py  exceptions.py
agent_dojo/database/: connection.py  models.py
agent_dojo/integrations/: composio_client.py
agent_dojo/observability/: langfuse_client.py  telemetry.py
agent_dojo/schemas/: composio.py
agent_dojo/tools/: schemas.py  tool_manager.py
agent_dojo/workflows/: __init__.py  workflow_manager.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/public/: manifest.json
frontend/public/icons/: README.md
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Header.tsx  Layout.tsx  Navigation.tsx
frontend/src/components/canvas/: CanvasToolbar.tsx  CustomNodes.tsx  NodePalette.tsx  PropertiesPanel.tsx
frontend/src/components/composio/: ConnectionManager.tsx  SchemaDisplay.tsx  ToolDetailPanel.tsx  ToolkitBrowser.tsx
frontend/src/components/modals/: CreateAgentModal.tsx
frontend/src/components/ui/: Button.tsx
frontend/src/hooks/: useTheme.tsx
frontend/src/pages/: Agents.tsx  Dashboard.tsx  Integrations.tsx  Settings.tsx  Tools.tsx  WorkflowCanvas.tsx
frontend/src/services/: composio.ts  credentials.ts
frontend/src/stores/: canvasStore.ts
frontend/src/styles/: macosTheme.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
scripts/: init-postgres.sql  init_db.py  resize_icons.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
